fix: add dark mode

--- a/src/app/[lang]/globals.css
+++ b/src/app/[lang]/globals.css
@@ -5,10 +5,6 @@
 @tailwind utilities;
 @import "react-slideshow-image/dist/styles.css";
 
-body {
-  background: radial-gradient(ellipse at bottom, #0D1E31, #111);
-}
-
 
 /******************************************* 
   Rich Text Styles
